--- a/ateliers/datatable.Rmd
+++ b/ateliers/datatable.Rmd
@@ -166,7 +166,7 @@ dt
 
 Exemple: on veut calculer la moyenne de `y` par groupe défini par `x`, uniquement sur les observations pour lesquelles `x` est supérieur à 3
 
-<div class="inline-table"><table class="table" style="width : 70% ;">
+<div class="inline-table"><table class="table" style="width : 70%">
 <tr>
 <td>
 <strong><code>Base R</code></strong>
@@ -174,8 +174,8 @@ Exemple: on veut calculer la moyenne de `y` par groupe défini par `x`, uniqueme
 <td>
 <div class="sourceCode" id="cb216"><pre class="downlit sourceCode r">
 <code class="sourceCode R"><span class="fu"><a href="https://rdrr.io/r/stats/aggregate.html">aggregate</a></span><span class="op">(</span>
-  <span class="va">dt</span><span class="op">[</span><span class="va">dt</span><span class="op">[[</span><span class="st">"x"</span><span class="op">]</span><span class="op">]</span> <span class="op">&gt ;</span> <span class="fl">3</span><span class="op">]</span><span class="op">$</span><span class="va">y</span>,
-  by <span class="op">=</span> <span class="fu"><a href="https://rdrr.io/r/base/list.html">list</a></span><span class="op">(</span><span class="va">dt</span><span class="op">[</span><span class="va">dt</span><span class="op">[[</span><span class="st">"x"</span><span class="op">]</span><span class="op">]</span> <span class="op">&gt ;</span> <span class="fl">3</span><span class="op">]</span><span class="op">$</span><span class="va">z</span><span class="op">)</span>,
+  <span class="va">dt</span><span class="op">[</span><span class="va">dt</span><span class="op">[[</span><span class="st">"x"</span><span class="op">]</span><span class="op">]</span> <span class="op">&gt</span> <span class="fl">3</span><span class="op">]</span><span class="op">$</span><span class="va">y</span>,
+  by <span class="op">=</span> <span class="fu"><a href="https://rdrr.io/r/base/list.html">list</a></span><span class="op">(</span><span class="va">dt</span><span class="op">[</span><span class="va">dt</span><span class="op">[[</span><span class="st">"x"</span><span class="op">]</span><span class="op">]</span> <span class="op">&gt</span> <span class="fl">3</span><span class="op">]</span><span class="op">$</span><span class="va">z</span><span class="op">)</span>,
   FUN = sum) </code></pre></div>
 </td>
 </tr>
@@ -185,9 +185,9 @@ Exemple: on veut calculer la moyenne de `y` par groupe défini par `x`, uniqueme
 </td>
 <td>
 <div class="sourceCode" id="cb217"><pre class="downlit sourceCode r">
-<code class="sourceCode R"><span class="va">dt</span> <span class="op">%&gt ;%</span>
-  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/filter.html">filter</a></span><span class="op">(</span><span class="va">x</span> <span class="op">&gt ;</span> <span class="fl">3</span><span class="op">)</span> <span class="op">%&gt ;%</span>
-  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/group_by.html">group_by</a></span><span class="op">(</span><span class="va">z</span><span class="op">)</span> <span class="op">%&gt ;%</span>
+<code class="sourceCode R"><span class="va">dt</span> <span class="op">%&gt%</span>
+  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/filter.html">filter</a></span><span class="op">(</span><span class="va">x</span> <span class="op">&gt</span> <span class="fl">3</span><span class="op">)</span> <span class="op">%&gt%</span>
+  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/group_by.html">group_by</a></span><span class="op">(</span><span class="va">z</span><span class="op">)</span> <span class="op">%&gt%</span>
   <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/summarise.html">summarise</a></span>(sum(y))
 </code></pre></div>
 </td>
@@ -339,49 +339,54 @@ filosofi_com_2016_dt[sample(.N,2)]
 # L'opérateur `:=`
 ## Principe
 
-
-<div> 
-<table class='table'>
+.small90[
+<div class="inline-table"><table class="table">
 <colgroup>
-<col span="1" style="width: 10% ;">
-<col span="1" style="width: 50% ;">
-<col span="1" style="width: 40% ;">
+<col span="1" style="width: 10%;">
+<col span="1" style="width: 50%;">
+<col span="1" style="width: 40%;">
 </colgroup>
-<tr> <th> _Package_ </th> <th> Code </th> <th> Commentaire </th> </tr> <tr>
+<tr>
+<th>
+<em>Package</em>
+</th>
+<th>
+Code
+</th>
+<th>
+Commentaire
+</th>
+</tr>
+<tr>
 <td>
-```{asis echo=TRUE}
-`dplyr`
-```
-</td> 
-<td>
-```{r eval=FALSE}
-bpe_ens_2018 <- 
-  bpe_ens_2018 %>%
-  dplyr::mutate(nouvelle_colonne =  NB_EQUIP * 10)
-```
+<code>dplyr</code>
 </td>
 <td>
-Il faut utiliser une assignation (`<-`) pour modifier la table.
+<div class="sourceCode" id="cb254"><pre class="downlit sourceCode r">
+<code class="sourceCode R"><span class="va">bpe_ens_2018</span> <span class="op">&lt;-</span> 
+  <span class="va">bpe_ens_2018</span> <span class="op">%&gt;%</span>
+  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/summarise.html">mutate</a></span>(nouvelle_colonne = <span class="va">NB_EQUIP</span> * 10)
+</code></pre></div>
+</td>
+<td>
+Il faut utiliser une assignation (<code><a href="https://rdrr.io/r/base/assignOps.html">&lt;-</a></code>) pour modifier la table.
 </td>
 </tr>
 <tr>
 <td>
-```{asis echo=TRUE}
-`data.table`
-```
-</td> 
-<td>
-```{r eval=FALSE}
-bpe_ens_2018_dt[ , nouvelle_colonne :=  NB_EQUIP * 10]
-```
+<code>data.table</code>
 </td>
 <td>
-Il ne faut pas d'assignation pour modifier la table, qui est modifiée par référence.
+<div class="sourceCode" id="cb254"><pre class="downlit sourceCode r"><code class="sourceCode R">
+<span class="va">bpe_ens_2018</span>[, nouvelle_colonne := <span class="va">NB_EQUIP</span> * 10]
+</code></pre></div>
+</td>
+<td>
+Il ne faut pas d’assignation pour modifier la table, qui est modifiée par référence.
 </td>
 </tr>
-</table>
-</div>
-
+</table></div>
+]
 
 ---
 # L'opérateur `:=`
