--- a/ateliers/index.Rmd
+++ b/ateliers/index.Rmd
@@ -18,7 +18,7 @@ output:
     - css/custom.css
     includes:
       after_body: insert-logo.html
-    lib_dir: libs
+    lib_dir: public/libs
     nature:
       highlightStyle: github
       highlightLines: true
