Mettre à jour les liens

--- a/ateliers/index.Rmd
+++ b/ateliers/index.Rmd
@@ -26,5 +26,7 @@ output:
 ---
 # Présentation des ateliers
 
+* [Présentation imports de fichiers plats et de tableurs](./import_fichiers.html) (script uniquement [ici](./import_fichiers.R))
+* [Présentation tidyverse](./tidyverse.html) (script uniquement [ici](./tidyverse.R))
 * [Présentation data.table](./datatable.html) (script uniquement [ici](./datatable.R))
 * [Présentation data.table](./graphiques.html) (script uniquement [ici](./graphiques.R))
