--- a/ateliers/index.Rmd
+++ b/ateliers/index.Rmd
@@ -26,7 +26,11 @@ output:
 ---
 # Présentation des ateliers
 
-* [Présentation imports de fichiers plats et de tableurs](./import_fichiers.html) (script uniquement [ici](./import_fichiers.R))
 * [Présentation manipuler des données avec le `tidyverse`](./tidyverse.html) (script uniquement [ici](./tidyverse.R))
 * [Présentation manipuler des données avec `data.table`](./datatable.html) (script uniquement [ici](./datatable.R))
 * [Présentation réaliser des graphiques avec `ggplot2`](./graphiques.html) (script uniquement [ici](./graphiques.R))
+* [Utiliser des packages, choisir ses packages et gérer ses dépendances](./atelier-dependances.html) (script uniquement [ici](./atelier-dependances.R))
+
+<!---
+* [Présentation imports de fichiers plats et de tableurs](./import_fichiers.html) (script uniquement [ici](./import_fichiers.R))
+---->
