--- a/ateliers/index.Rmd
+++ b/ateliers/index.Rmd
@@ -3,7 +3,7 @@ title : "Les ateliers `utilitR`"
 subtitle : "Accéder aux présentations"
 author : "Lino Galiana"
 institute : "Insee"
-date : "`r format(Sys.time(), '%d %B %Y')`"
+date : "8 juin 2021"
 output:
   xaringan::moon_reader:
     new_session: yes
