--- a/ateliers/datatable.Rmd
+++ b/ateliers/datatable.Rmd
@@ -3,7 +3,7 @@ title : "Manipuler des données avec `data.table`"
 subtitle : "Atelier __`utilitR`__"
 author : "Lino Galiana"
 institute : "Insee"
-date : "`r format(Sys.time(), '%d %B %Y')`"
+date : "8 juin 2021"
 output:
   xaringan::moon_reader:
     new_session: yes
