--- a/ateliers/import_fichiers.Rmd
+++ b/ateliers/import_fichiers.Rmd
@@ -3,7 +3,7 @@ title : "Import de fichiers plats et tableurs"
 subtitle : "`utilitR<br>`Matinées de découverte"
 author: Pierre-Yves Berrard
 institute : "Insee"
-date : "`r format(as.Date('2021-06-08'), '%d %B %Y')`"
+date : "8 juin 2021"
 output:
   xaringan::moon_reader:
     new_session: yes
