--- a/ateliers/graphiques.Rmd
+++ b/ateliers/graphiques.Rmd
@@ -17,7 +17,7 @@ output:
     - css/customize-slides.css
     - css/custom.css
     includes:
-      after_body: insert-logo.html
+      after_body: ../insert-logo.html
     lib_dir: libs
     nature:
       highlightStyle: github
@@ -36,43 +36,20 @@ knitr::opts_chunk$set(eval = params$eval)
 ```
 
 
-<div class="inline-table"><table class="table" style="width : 70%;">
-<tr>
-<td>
-<strong><code>Base R</code></strong>
-</td>
-<td>
-<div class="sourceCode" id="cb216"><pre class="downlit sourceCode r">
-<code class="sourceCode R"><span class="fu"><a href="https://rdrr.io/r/stats/aggregate.html">aggregate</a></span><span class="op">(</span>
-  <span class="va">dt</span><span class="op">[</span><span class="va">dt</span><span class="op">[[</span><span class="st">"x"</span><span class="op">]</span><span class="op">]</span> <span class="op">&gt;</span> <span class="fl">3</span><span class="op">]</span><span class="op">$</span><span class="va">y</span>,
-  by <span class="op">=</span> <span class="fu"><a href="https://rdrr.io/r/base/list.html">list</a></span><span class="op">(</span><span class="va">dt</span><span class="op">[</span><span class="va">dt</span><span class="op">[[</span><span class="st">"x"</span><span class="op">]</span><span class="op">]</span> <span class="op">&gt;</span> <span class="fl">3</span><span class="op">]</span><span class="op">$</span><span class="va">z</span><span class="op">)</span>,
-  FUN = sum) </code></pre></div>
-</td>
-</tr>
-<tr>
-<td>
-<strong><code>dplyr</code></strong>
-</td>
-<td>
-<div class="sourceCode" id="cb217"><pre class="downlit sourceCode r">
-<code class="sourceCode R"><span class="va">dt</span> <span class="op">%&gt;%</span>
-  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/filter.html">filter</a></span><span class="op">(</span><span class="va">x</span> <span class="op">&gt;</span> <span class="fl">3</span><span class="op">)</span> <span class="op">%&gt;%</span>
-  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/group_by.html">group_by</a></span><span class="op">(</span><span class="va">z</span><span class="op">)</span> <span class="op">%&gt;%</span>
-   <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/summarise.html">summarise</a></span>(sum(y))
-</code></pre></div>
-</td>
-</tr>
-<tr>
-<td>
-<strong><code>data.table</code></strong>
-</td>
-<td>
-<div class="sourceCode" id="cb218"><pre class="downlit sourceCode r">
-<code class="sourceCode R">dt[x > 3, sum(y), by = z]
-</code></pre></div>
-</td>
-</tr>
-</table></div>
+.sauterligne2[
+Cet atelier vise à montrer comment on peut utiliser de la documentation `utilitR` pour réaliser des graphiques avec `R`.
+]
+
+
+.sauterligne3[
+.small90[
+.remarque[
+  Cette présentation n'aborde que les principaux éléments. Vous pouvez vous référer à la [documentation elle-même](https://www.utilitr.org/) pour des informations détaillées !
+  
+]
+]
+]
+
 
 ---
 # Atelier réaliser des graphiques
@@ -159,11 +136,11 @@ Vous pouvez accéder à cet _add-in_ en cliquant sur *'ggplot2' builder* dans le
 ]
 
 ```{r, echo = FALSE, out.width= "50%", out.extra= 'style = "position: absolute; top: 5cm; left: 2cm; padding: 0;"'}
-knitr::include_graphics("./resources/intro_graphiques/addin_rstudio.png")
+knitr::include_graphics("../resources/intro_graphiques/addin_rstudio.png")
 ```
 
 ```{r, echo = FALSE, out.width= "25%", out.extra= 'style = "position: absolute; top: 5cm; left: 15cm; padding: 0;"'}
-knitr::include_graphics("./resources/intro_graphiques/addin_rstudio2.png")
+knitr::include_graphics("../resources/intro_graphiques/addin_rstudio2.png")
 ```
 
 ---
@@ -173,7 +150,7 @@ knitr::include_graphics("./resources/intro_graphiques/addin_rstudio2.png")
 Dans la première boîte de dialogue, vous devez sélectionner le `data.frame` qui contient les données que vous voulez représenter sur le graphique. Vous pouvez éventuellement sélectionner certaines variables, et modifier le type de certaines variables.
 
 ```{r, echo = FALSE, out.width= "75%"}
-knitr::include_graphics("./resources/intro_graphiques/choix_dataframe.png")
+knitr::include_graphics("../resources/intro_graphiques/choix_dataframe.png")
 ```
 
 ---
@@ -182,7 +159,7 @@ knitr::include_graphics("./resources/intro_graphiques/choix_dataframe.png")
 Une nouvelle boîte de dialoque s'affiche, grâce à laquelle vous pouvez contruire un graphique. Les variables présentes dans vos données sont listées en haut.
 
 ```{r, echo = FALSE, out.width= "95%"}
-knitr::include_graphics("./resources/intro_graphiques/esquisse_vide.png")
+knitr::include_graphics("../resources/intro_graphiques/esquisse_vide.png")
 ```
 
 ---
@@ -191,7 +168,7 @@ knitr::include_graphics("./resources/intro_graphiques/esquisse_vide.png")
 Vous pouvez déplacer les variables dans les différentes catégories (dans le cadre vert) : `x` pour les abscisses, `y` pour les ordonnées, `color` et `size` pour la couleur et la taille des éléments graphiques...
 
 ```{r, echo = FALSE, out.width= "95%"}
-knitr::include_graphics("./resources/intro_graphiques/esquisse_champs.png")
+knitr::include_graphics("../resources/intro_graphiques/esquisse_champs.png")
 ```
 
 ---
@@ -200,7 +177,7 @@ knitr::include_graphics("./resources/intro_graphiques/esquisse_champs.png")
 Il est possible de modifier l'apparence du graphique (titres des axes, légende...) avec les menus en bas.
 
 ```{r, echo = FALSE, out.width= "95%"}
-knitr::include_graphics("./resources/intro_graphiques/esquisse_options.png")
+knitr::include_graphics("../resources/intro_graphiques/esquisse_options.png")
 ```
 
 ---
