--- a/ateliers/graphiques.Rmd
+++ b/ateliers/graphiques.Rmd
@@ -30,7 +30,7 @@ params:
 # Atelier réaliser des graphiques
 ## Objectif de cet atelier
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, purl = FALSE}
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(eval = params$eval)
 ```
@@ -135,11 +135,11 @@ data_iris_paris2017 <- doremifasolData::data_iris_paris_2017
 Vous pouvez accéder à cet _add-in_ en cliquant sur *'ggplot2' builder* dans le menu _Addins_ de  RStudio.
 ]
 
-```{r, echo = FALSE, out.width= "50%", out.extra= 'style = "position: absolute; top: 5cm; left: 2cm; padding: 0;"'}
+```{r, echo = FALSE, out.width= "50%", out.extra= 'style = "position: absolute; top: 5cm; left: 2cm; padding: 0;"', purl = FALSE}
 knitr::include_graphics("../resources/intro_graphiques/addin_rstudio.png")
 ```
 
-```{r, echo = FALSE, out.width= "25%", out.extra= 'style = "position: absolute; top: 5cm; left: 15cm; padding: 0;"'}
+```{r, echo = FALSE, out.width= "25%", out.extra= 'style = "position: absolute; top: 5cm; left: 15cm; padding: 0;"', purl = FALSE}
 knitr::include_graphics("../resources/intro_graphiques/addin_rstudio2.png")
 ```
 
@@ -149,7 +149,7 @@ knitr::include_graphics("../resources/intro_graphiques/addin_rstudio2.png")
 
 Dans la première boîte de dialogue, vous devez sélectionner le `data.frame` qui contient les données que vous voulez représenter sur le graphique. Vous pouvez éventuellement sélectionner certaines variables, et modifier le type de certaines variables.
 
-```{r, echo = FALSE, out.width= "75%"}
+```{r, echo = FALSE, out.width= "75%", purl = FALSE}
 knitr::include_graphics("../resources/intro_graphiques/choix_dataframe.png")
 ```
 
@@ -158,7 +158,7 @@ knitr::include_graphics("../resources/intro_graphiques/choix_dataframe.png")
 
 Une nouvelle boîte de dialoque s'affiche, grâce à laquelle vous pouvez contruire un graphique. Les variables présentes dans vos données sont listées en haut.
 
-```{r, echo = FALSE, out.width= "95%"}
+```{r, echo = FALSE, out.width= "95%", purl = FALSE}
 knitr::include_graphics("../resources/intro_graphiques/esquisse_vide.png")
 ```
 
@@ -167,7 +167,7 @@ knitr::include_graphics("../resources/intro_graphiques/esquisse_vide.png")
 
 Vous pouvez déplacer les variables dans les différentes catégories (dans le cadre vert) : `x` pour les abscisses, `y` pour les ordonnées, `color` et `size` pour la couleur et la taille des éléments graphiques...
 
-```{r, echo = FALSE, out.width= "95%"}
+```{r, echo = FALSE, out.width= "95%", purl = FALSE}
 knitr::include_graphics("../resources/intro_graphiques/esquisse_champs.png")
 ```
 
@@ -176,7 +176,7 @@ knitr::include_graphics("../resources/intro_graphiques/esquisse_champs.png")
 
 Il est possible de modifier l'apparence du graphique (titres des axes, légende...) avec les menus en bas.
 
-```{r, echo = FALSE, out.width= "95%"}
+```{r, echo = FALSE, out.width= "95%", purl = FALSE}
 knitr::include_graphics("../resources/intro_graphiques/esquisse_options.png")
 ```
 
@@ -264,7 +264,7 @@ Le *mapping* désigne dans `ggplot2` la relation entre un **attribut graphique**
 .small90[
 Ce code permet de produire un nuage de points (`geom_point`), avec le niveau de vie médian en abscisse (`x = niveau_vie_median`) et le taux de chômage en ordonnée (`y = taux_chomage`). 
 .sauterligne2[
-```{r, warning = FALSE, eval = FALSE}
+```{r, warning = FALSE, eval = FALSE, purl = FALSE}
 ggplot(data_iris_paris_2017) + 
   geom_point(
     aes(
@@ -324,7 +324,7 @@ Il est également possible d'utiliser ces mêmes arguments pour modifier un attr
 .leftcol[
 .small90[
 .sauterligne2[
-```{r, warning = FALSE, eval = FALSE}
+```{r, warning = FALSE, eval = FALSE, purl = FALSE}
 ggplot(data_iris_paris_2017) + 
   geom_point(
     aes(
@@ -363,7 +363,7 @@ ggplot(data_iris_paris_2017) +
 .leftcol[
 .small80[
 .sauterligne2[
-```{r, warning = FALSE, eval = FALSE}
+```{r, warning = FALSE, eval = FALSE, purl = FALSE}
 ggplot(data_iris_paris_2017) + 
   geom_point(
     aes(
@@ -422,7 +422,7 @@ Voici un exemple de graphique avec `geom_bar` :
 .leftcol[
 .small90[
 .sauterligne2[
-```{r, warning = FALSE, eval = FALSE}
+```{r, warning = FALSE, eval = FALSE, purl = FALSE}
 ggplot(data_iris_paris_2017) + 
   geom_bar(
     aes(
@@ -518,7 +518,7 @@ La fonction `labs()` permet de définir les titres :
 ]
 
 .small80[
-```{r, warning = FALSE, eval = FALSE}
+```{r, warning = FALSE, eval = FALSE, purl = FALSE}
 ggplot(data_iris_paris_2017) +
   geom_point(
     aes(x = niveau_vie_median, y = taux_chomage, color = part_cadres)
@@ -558,7 +558,7 @@ Les fonctions _scales_ dans `ggplot2` permettent de modifier la manière dont un
 ]
 
 .small80[
-```{r, warning = FALSE, eval = FALSE}
+```{r, warning = FALSE, eval = FALSE, purl = FALSE}
 library(scales)
 library(viridis)
 ggplot(data_iris_paris_2017) + 
@@ -608,7 +608,7 @@ ggplot(data_iris_paris_2017) +
 ## Un graphique complet
 
 .small80[
-```{r, warning = FALSE, eval = FALSE}
+```{r, warning = FALSE, eval = FALSE, purl = FALSE}
 ggplot(data_iris_paris_2017) + 
   geom_point(
     aes(x = niveau_vie_median, y = taux_chomage, color = part_cadres)
