--- a/ateliers/index.Rmd
+++ b/ateliers/index.Rmd
@@ -26,7 +26,7 @@ output:
 ---
 # Présentation des ateliers
 
-sauterligne3[
+.sauterligne3[
 * [Présentation manipuler des données avec le `tidyverse`](./tidyverse.html) (script uniquement [ici](./tidyverse.R))
 * [Présentation manipuler des données avec `data.table`](./datatable.html) (script uniquement [ici](./datatable.R))
 * [Présentation réaliser des graphiques avec `ggplot2`](./graphiques.html) (script uniquement [ici](./graphiques.R))
