--- a/ateliers/datatable.Rmd
+++ b/ateliers/datatable.Rmd
@@ -1,6 +1,6 @@
 ---
 title : "Manipuler des données avec `data.table`"
-subtitle : "Atelier __`utilitR`__"
+subtitle : "Matinées de découverte d'`utilitR`"
 author : "Lino Galiana"
 institute : "Insee"
 date : "8 juin 2021"
